<resources>
  <string name="app_name">Wallpaper Changer</string>
  <string name="activity_main_next_button">Next Wallpaper</string>
  <string name="activity_main_accept_button">Accept</string>
  <string name="activity_main_loading_image">Loading image…</string>
  <string name="activity_main_background_image_preview_description">Background Image preview</string>
  <string name="activity_main_action_bar_settings_name">Settings</string>
  <string name="settings_source_category">Image sources</string>
  <string name="settings_source_chooser_title">Image source</string>
  <string name="settings_source_chooser_summary">You are currently getting images from \'%s\'.</string>
  <string name="settings_source_chooser_key">settings_source_chooser_key</string>
  <string name="settings_automated_changing_category">Automated changing</string>
  <string name="settings_automated_changing_only_in_wifi_title">Only change in WIFI</string>
  <string name="settings_automated_changing_only_in_wifi_summary_off">I will always change your wallpaper, no matter if I am using mobile data.</string>
  <string name="settings_automated_changing_only_in_wifi_summary_on">I will only change the wallpaper when you have a wifi connection.</string>
  <string name="settings_automated_changing_only_in_wifi_key">settings_automated_changing_only_in_wifi_key</string>
  <string name="wallpaper_changer_task_changing_now">Changing the wallpaper now :)</string>
  <string name="settings_automated_changing_enabled_key">settings_automated_changing_enabled_key</string>
  <string name="settings_automated_changing_enabled_title">Automatic changing</string>
  <string name="settings_automated_changing_enabled_summary_off">Automated changing is off.</string>
  <string name="settings_automated_changing_enabled_summary_on">Automated changing is on.</string>
  <string name="preference_duration_input_spinner_separator">:</string>
  <string name="preference_duration_input_description_hour_text">Hours</string>
  <string name="preference_duration_input_description_day_text">Days</string>
  <string name="preference_duration_input_description_minute_text">Minutes</string>
  <string name="preference_duration_input_description_second_text">Seconds</string>
  <string formatted="false" name="preference_duration_input_summary_duration_format">%d d, %d h, %d m, %d s</string>
  <string name="settings_automated_changing_duration_title">Duration between changes</string>
  <string name="settings_automated_changing_duration_key">settings_automated_changing_duration_key</string>
  <string name="settings_automated_changing_duration_dialog_title">Select a duration!</string>
  <string name="settings_automated_changing_duration_summary">I will change the wallpaper every \'%s\'.</string>
</resources>
