<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

  <PreferenceCategory
    android:title="@string/settings_source_category">

    <ListPreference
      android:key="@string/settings_source_chooser_key"

      android:title="@string/settings_source_chooser_title"
      android:summary="@string/settings_source_chooser_summary"
      android:entries="@array/settings_source_chooser_entry_names"
      android:entryValues="@array/settings_source_chooser_entry_values"
      android:defaultValue="spaceTelescopes_Top_100"
      />

  </PreferenceCategory>

  <PreferenceCategory
    android:title="@string/settings_automated_changing_category">

    <SwitchPreference
      android:key="@string/settings_automated_changing_only_in_wifi_key"

      android:title="@string/settings_automated_changing_only_in_wifi_title"
      android:summaryOff="@string/settings_automated_changing_only_in_wifi_summary_off"
      android:summaryOn="@string/settings_automated_changing_only_in_wifi_summary_on"
      android:defaultValue="true"
      />

  </PreferenceCategory>
</PreferenceScreen>